# TCC

./: LICENSE  README.md
client/: .env.example  README.md  index.html  package-lock.json  package.json
server/: .env.example  .gitignore  Dockerfile  README.md  TEST_CASES.md  pyproject.toml
server/src/: main.py
server/src/api/dependencies/: __init__.py  auth.py  rate_limiter.py  service.py
server/src/api/dtos/: flow_dtos.py  user_dtos.py
server/src/api/handlers/: exception_handler.py
server/src/api/routers/: __init__.py  auth_router.py  flow_router.py  user_router.py
server/src/app/core/: auth.py  config.py  exceptions.py  metrics.py  security.py
server/src/app/db/: connection.py
server/src/app/evaluators/executors/: __init__.py  concrete_executor.py  symbolic_executor.py
server/src/app/evaluators/parser/: __init__.py  ebnf_parser.py
server/src/app/evaluators/transformers/: __init__.py  concrete_transfomer.py  symbolic_transformer.py
server/src/app/models/: flow.py  flow_model.py  metadata_model.py  node.py  node_model.py  symbolic_model.py  user_model.py
server/src/app/services/: __init__.py  fflow_service.py  flow.py  flow_service.py  telemetry_service.py  user_service.py
server/src/app/transformers/: evaluate_transfomer.py  grammar.ebnf  parser.py
server/src/core/: config.py
server/src/db/: mongodb.py
server/src/models/: flow.py  node.py
server/src/services/: flow.py
server/src/tests/: conftest.py  test_flow.py
server/src/utils/: pool.py  symbolic_var.py  validation.py
server/tests/: conftest.py  test_flow_service.py
(+98 files in other folders)
